# boolean-old

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose-dev.yaml  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json
migrations/: 20230328024339_init.sql
src/: commands.rs  config.rs  database.rs  embeds.rs  events.rs  files.ts  log.rs  main.rs  types.rs  util.rs
src/commands/: clear.rs  members.rs  ping.rs  serverinfo.ts  user.rs
src/database/: badges.rs  guild_config.rs
src/events/: guildMemberAdd.ts  interaction_create.rs  ready.rs  ready.ts
src/structures/: Bot.ts
