[package]
name = "boolean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng" ] }
sqlx = { version = "0.6.3", features = [ "postgres", "runtime-tokio-native-tls", "time" ] }
# Logging
sentry = "0.27.0"
sentry-tracing = "0.30.0"

